# Airport3DAssetGenerator

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: environment_and_models.md  evaluation_and_tests.md  image_pipeline.md  mesh_pipeline.md  mesh_quality_and_vlm.md  physics_and_export.md  prompt_and_config.md  repo_orchestrator.md
configs/: luggage_categories.yaml  material_properties.yaml  pipeline_config.yaml  prompt_templates.yaml
docker/: Dockerfile
docs/: SMALL_SCALE_TEST_REPORT.md  VERIFICATION_REPORT.md  t32_mesh_qa.md  t33_mesh_vlm_qa.md  vlm_config.md
scripts/: backup_outputs.py  download_models.py  generate_report.py  measure_pass_rates.py  run_pipeline.py  run_step.py  setup_environment.sh  setup_from_share.sh  start_vllm_server.sh
src/: diversity_evaluator.py  image_generator.py  image_qa.py  mesh_generator.py  mesh_qa.py  mesh_vlm_qa.py  physics_processor.py  pipeline.py  prompt_generator.py  scale_normalizer.py  sim_exporter.py
src/utils/: logging_utils.py  memory_guard.py  mesh_repair.py  rendering.py
tests/: test_backup_outputs.py  test_cli.py  test_diversity_evaluator.py  test_gpu_models.py  test_image_generator.py  test_image_qa.py  test_integration.py  test_memory_guard.py  test_mesh_generator.py  test_mesh_qa.py  test_mesh_vlm_qa.py  test_p2_output_integrity.py  test_pass_rate_analysis.py  test_physics_processor.py  test_pipeline.py  test_prompt_generator.py  test_rejection_report.py  test_rendering.py  test_sim_exporter.py
